--- a/index.html
+++ b/index.html
@@ -589,8 +589,9 @@
                     <h1 class="fade-in">Benedicta Adesewa Adebowale</h1>
                     <p class="subtitle fade-in">Business Analyst & Data Storyteller</p>
                     <p class="description fade-in">
-                        Transforming complex financial data into actionable insights with over 13 years of experience 
-                        across financial services. Passionate about customer experience, process improvements, and 
+                        A lifelong learner with over 13 years of experience delivering strategic initiatives 
+                        by translating complex business needs into clear deliverables.
+                        Passionate about driving process improvements, elevating the customer experience and 
                         turning data into compelling stories that drive business decisions.
                     </p>
                     <div class="cta-buttons fade-in">
@@ -639,27 +640,27 @@
             <div class="section-header">
                 <h2 class="section-title">About Me</h2>
                 <p class="section-subtitle">
-                    Bridging the gap between complex financial data and meaningful business outcomes
+                    Bridging the gap between complex data and meaningful business outcomes
                 </p>
             </div>
             <div class="about-content">
                 <div class="about-text">
                     <p>
-                        With over 13 years of experience in the financial services industry, I've worked across 
-                        various departments, gaining deep insights into how different business units operate and 
+                        I've worked across various departments in the financial services industry,
+                        gaining deep insights into how different business units operate and 
                         interconnect. My passion lies in transforming raw data into compelling narratives that 
                         drive strategic decision-making.
                     </p>
                     <br>
                     <p>
-                        I specialize in customer experience optimization, business process improvements, and 
+                        I specialize in business process improvements, customer experience optimization, and 
                         advanced analytics. My approach combines technical expertise with a keen understanding 
                         of business needs, ensuring that every analysis I deliver creates tangible value.
                     </p>
                     <br>
                     <p>
                         Beyond work, I'm endlessly curious about the world around me. I explore topics ranging 
-                        from everyday cooking adventures to complex societal issues, always seeking to understand 
+                        from everyday mundane adventures to complex societal issues, always seeking to understand 
                         different perspectives and learn something new.
                     </p>
                 </div>
@@ -705,6 +706,16 @@
                         actionable for stakeholders at all levels.
                     </p>
                 </div>
+                      <div class="skill-card fade-in">
+                    <div class="skill-icon">
+                        <i data-lucide="workflow" style="color: white;"></i>
+                    </div>
+                    <h3 class="skill-title">Process Improvement</h3>
+                    <p class="skill-description">
+                        Identifying inefficiencies and implementing streamlined workflows that reduce costs 
+                        and improve operational excellence.
+                    </p>
+                </div>
                 <div class="skill-card fade-in">
                     <div class="skill-icon">
                         <i data-lucide="heart-handshake" style="color: white;"></i>
@@ -715,16 +726,7 @@
                         and overall business performance.
                     </p>
                 </div>
-                <div class="skill-card fade-in">
-                    <div class="skill-icon">
-                        <i data-lucide="workflow" style="color: white;"></i>
-                    </div>
-                    <h3 class="skill-title">Process Improvement</h3>
-                    <p class="skill-description">
-                        Identifying inefficiencies and implementing streamlined workflows that reduce costs 
-                        and improve operational excellence.
-                    </p>
-                </div>
+          
                 <div class="skill-card fade-in">
                     <div class="skill-icon">
                         <i data-lucide="brain-circuit" style="color: white;"></i>
@@ -739,7 +741,7 @@
                     <div class="skill-icon">
                         <i data-lucide="building-2" style="color: white;"></i>
                     </div>
-                    <h3 class="skill-title">Financial Services</h3>
+                    <h3 class="skill-title">Domain Expertise</h3>
                     <p class="skill-description">
                         Deep domain expertise across multiple financial services departments, understanding 
                         regulatory requirements and industry best practices.
@@ -751,7 +753,7 @@
                     </div>
                     <h3 class="skill-title">Data Visualization</h3>
                     <p class="skill-description">
-                        Creating impactful visualizations using Tableau and other tools to communicate 
+                        Creating impactful visualizations using Tableau, Powwer BI and other tools to communicate 
                         insights effectively and drive data-informed decisions.
                     </p>
                 </div>
@@ -774,8 +776,8 @@
                     <p>
                         I'm always interested in discussing new opportunities, sharing insights about 
                         business analytics, or connecting with fellow data enthusiasts. Whether you're 
-                        looking for collaboration or just want to chat about the latest trends in 
-                        financial services, feel free to reach out!
+                        looking for collaboration or just want to chat about the latest trends, 
+                        feel free to reach out!
                     </p>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/benny-adebowale/" target="_blank" class="social-link" title="LinkedIn">
