--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Benedicta Adesewa Adebowale</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lucide/0.263.1/umd/lucide.js"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
+
     <style>
         * {
             margin: 0;
@@ -753,7 +755,7 @@
                     </div>
                     <h3 class="skill-title">Data Visualization</h3>
                     <p class="skill-description">
-                        Creating impactful visualizations using Tableau, Powwer BI and other tools to communicate 
+                        Creating impactful visualizations using Tableau, Power BI and other tools to communicate 
                         insights effectively and drive data-informed decisions.
                     </p>
                 </div>
@@ -781,13 +783,13 @@
                     </p>
                     <div class="social-links">
                         <a href="https://www.linkedin.com/in/benny-adebowale/" target="_blank" class="social-link" title="LinkedIn">
-                            <i data-lucide="linkedin"></i>
+                            <i class="fab fa-linkedin"></i>
                         </a>
                         <a href="https://public.tableau.com/app/profile/benedicta.a/vizzes" target="_blank" class="social-link" title="Tableau Portfolio">
-                            <i data-lucide="bar-chart-3"></i>
+                            <i class="fa-solid fa-chart-column"></i>
                         </a>
                         <a href="https://www.instagram.com/the_reluctant.cook/" target="_blank" class="social-link" title="Instagram">
-                            <i data-lucide="instagram"></i>
+                            <i class="fab fa-instagram"></i>
                         </a>
                     </div>
                 </div>
@@ -822,7 +824,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Benedicta Adesewa Adebowale. Crafted with passion for data and storytelling.</p>
+            <p>&copy; 2025 Benedicta Adesewa Adebowale.</p>
         </div>
     </footer>
 
@@ -887,7 +889,7 @@
             const message = formData.get('message');
             
             // Create mailto link
-            const mailtoLink = `mailto:your-email@example.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(`Name: ${name}\nEmail: ${email}\n\nMessage:\n${message}`)}`;
+            const mailtoLink = `mailto:benny.a.ade@gmail.com?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(`Name: ${name}\nEmail: ${email}\n\nMessage:\n${message}`)}`;
             
             // Open email client
             window.location.href = mailtoLink;
